<resources>
    <string name="app_name">6-NavDrawerTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nav App Final</string>
    <string name="nav_header_subtitle">spencerlenahan@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gtn">Guess the number</string>
    <string name="menu_scifi">Sci-fi</string>
    <string name="menu_madlib">Mad Lib</string>
    <string name="menu_credits">Credits</string>

    <string name="output">output</string>
    <string name="generate">Generate</string>
    <string name="sis">Sis:</string>
    <string name="bro">Bro:</string>
    <string name="school">School:</string>
    <string name="city">City:</string>
    <string name="lastname">LastName:</string>
    <string name="first_name">First Name:</string>
    <string name="welcome_to_the_scifi_generator">Welcome to the SciFi Generator</string>
</resources>