<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.a6_navdrawertest.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_madlib"
        android:name="com.example.a6_navdrawertest.ui.MadLib.MadLibFragment"
        android:label="@string/menu_madlib"
        tools:layout="@layout/fragment_madlib" />

    <fragment
        android:id="@+id/nav_gtn"
        android:name="com.example.a6_navdrawertest.ui.guessTheNumber.GTNFragment"
        android:label="@string/menu_gtn"
        tools:layout="@layout/fragment_gtn" />

    <fragment
        android:id="@+id/nav_credits"
        android:name="com.example.a6_navdrawertest.ui.credits.CreditsFragment"
        android:label="@string/menu_credits"
        tools:layout="@layout/fragment_credits" />

    <fragment
        android:id="@+id/nav_scifi"
        android:name="com.example.a6_navdrawertest.ui.scifi.SciFiFragment"
        android:label="@string/menu_credits"
        tools:layout="@layout/fragment_credits" />


</navigation>